k8s/03-clients-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clients-service
  template:
    metadata:
      labels:
        app: clients-service
    spec:
      containers:
        - name: clients-service
          image: korvix18/novasoft-clients:latest   
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: clients-service
spec:
  selector:
    app: clients-service
  ports:
    - port: 8002
      targetPort: 8002
